# bot-multitask

./: .dockerignore  .env  .gitignore  .replit  Dockerfile  Pipfile  README.md  demo.py  docker-compose.yml  main.py  pyproject.toml  replit.nix  requirements.txt  todo.md
config/: __init__.py
handlers/: finance.py  gemeni_ai.py  google.py  os_control.py  random_food.py  short_url.py
handlers/file_utils/: __init__.py  convert_file.py
handlers/finance/: __init__.py  insider_tx.py  leadership.py  news.py  report.py  shareholder.py  stock.py
helpers/: bot.py  commands.py  utils.py
