[tool.poetry]
name = "repl-nix-bot-multitask"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_bot_multitask"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
python-telegram-bot = "^20.8"
googlesearch-python = "^1.2.3"
prettytable = "^3.9.0"
numerize = "^0.12"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
